# CooperBench

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
dataset/openai_tiktoken_task/task0/feature3/: feature.patch  tests.patch
dataset/subsets/: outlines_prompt_transitions.json
scripts/: cleanup_cooperbench_docker.sh  run_azure_gpt54_experiment.sh  run_outlines_gpt54_experiment.sh  run_outlines_gpt54_protocol_experiment.sh  run_outlines_gpt54_v2_benevolence_experiments.sh  run_outlines_gpt54_v2_protocol_pair_ablation.sh  run_outlines_gpt54_v2_solo_transition_subset.sh  run_outlines_gpt54_v2_three_experiments.sh  run_outlines_gpt54_v2_transition_protocol_experiment.sh  run_outlines_gpt54_v2_transition_subset.sh  run_outlines_gpt54_v2_transition_subset_protocol.sh  run_outlines_gpt54_v2_value_preference_experiments.sh  test_model.py  upload_current_dir_to_gdrive.sh  upload_dataset_to_hf.py
scripts/prompts/: cooperation_protocol.jinja  value_preference_anti_cooperative.jinja  value_preference_cooperative.jinja  value_preference_with_benevolence.jinja  value_preference_wo_benevolence.jinja
src/cooperbench/: __about__.py  cli.py  dataset.py  llm_config.py  utils.py
src/cooperbench/agents/: README.md  __init__.py  registry.py
src/cooperbench/agents/mini_swe_agent/: adapter.py
src/cooperbench/agents/mini_swe_agent/environments/: docker.py
src/cooperbench/agents/mini_swe_agent_v2/: adapter.py
src/cooperbench/agents/mini_swe_agent_v2/agents/: default.py
src/cooperbench/agents/mini_swe_agent_v2/config/: coop.yaml  solo.yaml
src/cooperbench/agents/mini_swe_agent_v2/connectors/git_servers/: docker.py
src/cooperbench/agents/mini_swe_agent_v2/environments/: docker.py
src/cooperbench/agents/mini_swe_agent_v2/models/: litellm_model.py
src/cooperbench/agents/mini_swe_agent_v2/models/utils/: actions_toolcall.py
src/cooperbench/agents/openhands_agent_sdk/: adapter.py
src/cooperbench/agents/openhands_agent_sdk/openhands-sdk/openhands/sdk/conversation/: event_store.py
src/cooperbench/agents/openhands_agent_sdk/openhands-sdk/openhands/sdk/observability/: laminar.py
src/cooperbench/agents/openhands_agent_sdk/openhands-sdk/openhands/sdk/tool/: tool.py
src/cooperbench/agents/openhands_agent_sdk/openhands-sdk/openhands/sdk/utils/: paging.py
src/cooperbench/agents/openhands_agent_sdk/openhands-tools/openhands/tools/terminal/terminal/: terminal_session.py
src/cooperbench/eval/: evaluate.py  runs.py  sandbox.py
src/cooperbench/eval/backends/: __init__.py  docker.py  modal.py
src/cooperbench/runner/: coop.py  core.py  solo.py  tasks.py
tests/: test_cli.py  test_llm_config.py  test_package.py  test_smoke.py
tests/agents/: test_llm_provider_wiring.py  test_mini_swe_agent_protocol.py  test_mini_swe_agent_v2_docker_environment.py  test_mini_swe_agent_v2_model_serialization.py  test_mini_swe_agent_v2_observations.py  test_mini_swe_agent_v2_protocol.py  test_registry.py
tests/agents/mini_swe_agent_v2/: __init__.py
tests/agents/mini_swe_agent_v2/connectors/: __init__.py  test_messaging.py
tests/integration/: test_docker_git.py  test_git.py
tests/runner/: test_coop_conversation.py  test_core.py  test_protocol_wiring.py  test_tasks.py
